--- a/BugaleNBodySimulator/BugaleNBodySimulator.vcxproj.filters
+++ b/BugaleNBodySimulator/BugaleNBodySimulator.vcxproj.filters
@@ -34,9 +34,6 @@
     <ClCompile Include="Source Files\Graphic3D.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Source Files\Errors.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Strings\StringController.cpp">
       <Filter>Strings</Filter>
     </ClCompile>
@@ -45,6 +42,9 @@
     </ClCompile>
     <ClCompile Include="Legacy Support\invarg.c">
       <Filter>Legacy Support</Filter>
+    </ClCompile>
+    <ClCompile Include="Source Files\ErrorHandler.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -88,6 +88,9 @@
     </ClInclude>
     <ClInclude Include="Strings\EnglishUS_Strings.h">
       <Filter>Strings</Filter>
+    </ClInclude>
+    <ClInclude Include="Header Files\ErrorHandler.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
