--- a/BugaleNBodySimulator/BugaleNBodySimulator.vcxproj.filters
+++ b/BugaleNBodySimulator/BugaleNBodySimulator.vcxproj.filters
@@ -18,6 +18,9 @@
     <Filter Include="Legacy Support">
       <UniqueIdentifier>{8bd88354-ebdc-418c-9a31-e865306c4cb2}</UniqueIdentifier>
     </Filter>
+    <Filter Include="CUDA">
+      <UniqueIdentifier>{16ead406-7760-46f1-9c57-89861a312188}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -44,6 +47,9 @@
       <Filter>Legacy Support</Filter>
     </ClCompile>
     <ClCompile Include="Source Files\ErrorHandler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source Files\LibraryLoader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -90,6 +96,18 @@
       <Filter>Strings</Filter>
     </ClInclude>
     <ClInclude Include="Header Files\ErrorHandler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CUDA\PTXFile.h">
+      <Filter>CUDA</Filter>
+    </ClInclude>
+    <ClInclude Include="Header Files\CUDAHandler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\CUDAHandler.cpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Header Files\LibraryLoader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
